程序员B解决冲突

--- a/index.html
+++ b/index.html
@@ -1,6 +1,2 @@
 13224324xsdcdsafdsfpush -r43qrerfawefdsf
-<<<<<<< HEAD
-b-adefaewdewdewdwed
-=======
-adsda
->>>>>>> 82f5fd0490ef96fd6568e22471a101184428f800
+adsdafs
